# step-stone

./: README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
config/: prompts.yml
src/: db_connector.py  llm_api.py  task.py  ui.py
tests/: test_llm_api.py  test_mongodb_connector.py  test_task.py
